fix: text content alignment

--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ header button {
     }
 
 }
+.wordings{
+    margin-left: 40px;
+}
 
 /* Section: hero page */
 section.hero-section {
